# Unplot

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
src/: __init__.py  main.py
src/core/: __init__.py  coordinate_mapper.py  data_extractor.py  image_loader.py  image_normalizer.py  image_types.py  image_writer.py  layout_detector.py  orientation_detector.py  page_dewarper.py  perspective_corrector.py  point_detector.py  roi_extractor.py
src/core/image_process/: __init__.py  base.py  image_loader.py  image_normalizer.py  image_types.py  image_writer.py  layout_detector.py  orientation_detector.py  page_dewarper.py  perspective_corrector.py  roi_extractor.py
src/core/pipeline/: __init__.py  context.py  pipeline.py  registry.py  step.py
src/ui/: __init__.py  center_panel.py  center_toolbar.py  data_panel.py  icon_utils.py  image_canvas.py  main_window.py  main_window_controller.py  nav_bar.py  property_table.py  right_panel.py  work_tree.py
src/ui/settings_sections/: __init__.py  base.py  sections.py
src/utils/: __init__.py  export_data.py
tests/: export_core_outputs.py  test_core_image_processing.py  test_extractor.py  test_main_window.py  test_pipeline.py  test_property_table.py  test_work_tree.py
